--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <article class="advantages_card">
           <!-- Add image-->
           <div class="advantages_card_graphics">
-            <img src="/img/_DSC0605.jpg" alt="r">
+            <img src="./img/_DSC0605.jpg" alt="r">
           </div>
           <div class="advantages_card_text">
             <h3>Legere hendrerit vectigal poenam</h3>
@@ -58,7 +58,7 @@
         <article class="advantages_card">
           <!-- Add image-->
           <div class="advantages_card_graphics">
-            <img src="/img/_DSC0605.jpg" alt="r">
+            <img src="./img/_DSC0605.jpg" alt="r">
           </div>
           <div class="advantages_card_text">
             <h3>Target actions and improvements</h3>
@@ -71,7 +71,7 @@
         <article class="advantages_card">
           <!-- Add image-->
           <div class="advantages_card_graphics">
-            <img src="/img/_DSC0605.jpg" alt="r">
+            <img src="./img/_DSC0605.jpg" alt="r">
           </div>
           <div class="advantages_card_text">
             <h3>Qui liberum augue eum nam arcui</h3>
@@ -84,7 +84,7 @@
         <article class="advantages_card">
           <!-- Add image-->
           <div class="advantages_card_graphics">
-            <img src="/img/_DSC0605.jpg" alt="r">
+            <img src="./img/_DSC0605.jpg" alt="r">
           </div>
           <div class="advantages_card_text">
             <h3>Harum quae odio minim</h3>
@@ -97,7 +97,7 @@
         <article class="advantages_card">
           <!-- Add image-->
           <div class="advantages_card_graphics">
-            <img src="/img/_DSC0605.jpg" alt="r">
+            <img src="./img/_DSC0605.jpg" alt="r">
           </div>
           <div class="advantages_card_text">
             <h3>Ab eius nobis at romanorum</h3>
